syntax = "proto3";

service User {
    rpc Create (UserCreateRequest) returns (UserCreateResponse);
    rpc Query (UserQueryRequest) returns (UserInfo);
    rpc Find (UserFindRequest) returns (UserFindResponse);
    rpc Update (UserInfo) returns (UserUpdateResponse);
}

message UserCreateRequest {
    string studentID = 1;
    string studentName = 2;
}

message UserCreateResponse {
    enum Status {
        UNKNOWN = 0;
        INVALID_PARAM = -1;
        SUCCESS = 1;
        USER_EXIST = 2;
    }
    Status status = 1;
    UserInfo user = 2;
}

message UserQueryRequest {
    int32 userID = 1;
}

message UserInfo {
    enum Status {
        UNKNOWN = 0;
        NORMAL = 1;
        FROZEN = 2;
    }
    enum Role {
        GUEST = 0;
        USER = 1;
        ADMIN = 10;
    }
    int32 userID = 1;
    string userName = 2;
    string avatarID = 3;
    string telephone = 4;
    string studentID = 5;
    string studentName = 6;
    Status status = 7;
    Role role = 8;
    bool clearEmpty = 99;
}

message UserFindRequest {
    string userName = 1;
    uint32 limit = 2;
    uint32 offset = 3;
}

message UserFindResponse {
    repeated UserInfo user = 1;
}

message UserUpdateResponse {
    enum Status {
        UNKNOWN = 0;
        INVALID_PARAM = -1;
        SUCCESS = 1;
        NOT_FOUND = 2;
    }
    Status status = 1;
}
